--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.77.3",
+    "sass-loader": "^14.2.1",
+    "webpack": "^5.91.0"
   }
 }
